cluster/homelab/apps/replacedby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: replacedby
  labels:
    app.kubernetes.io/instance: replacedby
    app.kubernetes.io/name: replacedby
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: replacedby
      app.kubernetes.io/name: replacedby
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: replacedby
        app.kubernetes.io/name: replacedby
    spec:
      restartPolicy: Always
      containers:
        - name: replacedby
          image: ghcr.io/michaelpalacce/replacedby:0.1.1769375940
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 1
              memory: 1Gi
          ports:
            - name: web
              containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - "ALL"
              add:
                - CHOWN
                - SETUID
                - SETGID
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 30
            tcpSocket:
              port: 8080
            timeoutSeconds: 2
          startupProbe:
            failureThreshold: 20
            timeoutSeconds: 2
            tcpSocket:
              port: 8080
