cluster/homelab/apps/replacedby/gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: replacedby-external
spec:
  parentRefs:
    - name: external-replacedby
      namespace: istio-gateway
  hostnames:
    - "replacedby.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: replacedby
          port: 8080
